<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen">

  <View
      android:id="@+id/imagem_principal"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@drawable/bg_imagem_principal" />

  <ImageView
      android:layout_width="150dp"
      android:layout_height="80dp"
      android:src="@drawable/bg_phone"
      app:layout_constraintStart_toStartOf="@id/titulo_app"
      app:layout_constraintEnd_toEndOf="@id/titulo_app"
      app:layout_constraintTop_toTopOf="@id/imagem_principal"
    app:layout_constraintBottom_toBottomOf="@id/imagem_principal"/>
  
  <TextView
      android:id="@+id/titulo_app"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_firebase"
      android:layout_marginTop="64dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:textSize="34sp"
      android:textStyle="bold"
      android:textColor="@color/white"/>
  
  <TextView
      android:id="@+id/texto_bem_vindo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/imagem_principal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp"
      android:textSize="20sp"
      android:textStyle="bold"
      android:text="@string/bem_vindo_novamente"
      android:textColor="@color/purple"/>

  <TextView
      android:id="@+id/texto_tudo_que_precisa"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/texto_bem_vindo"
      app:layout_constraintStart_toStartOf="@id/texto_bem_vindo"
      app:layout_constraintEnd_toEndOf="@id/texto_bem_vindo"
      android:layout_marginTop="16dp"
      android:textSize="16sp"
      android:text="@string/tudo_que_precisa_aqui"/>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_logar"
      android:layout_width="200dp"
      android:layout_height="50dp"
      app:layout_constraintStart_toStartOf="@id/texto_tudo_que_precisa"
      app:layout_constraintEnd_toEndOf="@id/texto_tudo_que_precisa"
      app:layout_constraintTop_toBottomOf="@id/texto_tudo_que_precisa"
      android:layout_marginTop="16dp"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:text="@string/login"
      android:background="@drawable/bg_button_login"/>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_cadastrar"
      android:layout_width="200dp"
      android:layout_height="50dp"
      app:layout_constraintStart_toStartOf="@id/button_logar"
      app:layout_constraintTop_toBottomOf="@id/button_logar"
      android:layout_marginTop="16dp"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/purple"
      android:text="@string/cadastro"
      android:background="@drawable/bg_button_vazio"/>
  
  </androidx.constraintlayout.widget.ConstraintLayout>